--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -1,3 +1,15 @@
 <h1>Home</h1>
 
-<pre>{{Projects}}</pre>
+{% for Project in Projects %}
+
+<h2>{{ Project.title }}</h2>
+<p>{{ Project.description }}</p>
+<img src="{{ Project.image.url }}" alt="{{Project.tittle}}">
+
+{% if Project.url %}
+
+    <a href="{{Project.url}}">{{Project.url}}</a>
+
+{% endif %}
+
+{% endfor %}
