--- a/blog/templates/posts.html
+++ b/blog/templates/posts.html
@@ -1,1 +1,10 @@
-<h1>Post</h1>
+<h1>posts</h1>
+
+{% for post in posts %}
+
+    <h2>{{post.title}}</h2>
+    <p>{{post.description|truncatechars:100}}</p>
+    <img src="{{post.image.url}}" alt="{{post.title}}">
+
+{% endfor %}
+
