--- a/blog/templates/posts.html
+++ b/blog/templates/posts.html
@@ -1,10 +1,18 @@
+{% extends 'layout.html'%}
+
+
+{% block content %}
 <h1>posts</h1>
 
 {% for post in posts %}
 
     <h2>{{post.title}}</h2>
-    <p>{{post.description|truncatechars:100}}</p>
+    <p>{{post.description|striptags|truncatechars:100}}</p>
+    <p>{{post.date|date:'M d Y'|upper}}</p>
     <img src="{{post.image.url}}" alt="{{post.title}}">
+    <p></p>
+    <a href="{% url 'blog:post_detail' post.id %}">{{post.title}}</a>
 
 {% endfor %}
 
+{% endblock %}
