--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -1,3 +1,7 @@
+{% extends 'layout.html' %}
+
+{% block content %}
+
 <h1>Home</h1>
 
 {% for Project in Projects %}
@@ -13,3 +17,5 @@
 {% endif %}
 
 {% endfor %}
+
+{% endblock %}
