--- a/portfolio/templates/layout.html
+++ b/portfolio/templates/layout.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,15 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Django Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'main.css' %}">
 </head>
 <body>
 
     {% include 'partials/_navbar.html'%}
 
-    {% block content %}
-    {% endblock %}
-
-    <footer>Footer</footer>
+    <div class="container p-4">
+        {% block content %}
+        {% endblock %}
+    </div>
+    
     
 </body>
 </html>
