--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -7,7 +7,7 @@
         <img src="{% static 'portfolio/Munir J. Kahil.jpg'%}" alt=""/>
 
     </div>
-    <div class="col-md-8">
+    <div class="col-md-8 my-auto">
         <h1>I am <strong>Munir Kahil</strong></h1>
         <h3>I am a Python backend Developer</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto odio magni ipsam officiis corrupti dolorum
@@ -21,26 +21,38 @@
             id, obcaecati dolore quidem saepe quia tempora quae aliquid praesentium omnis veniam maiores. Ab optio
             nesciunt
             a, doloremque expedita quae sapiente dolores, asperiores architecto laboriosam fugiat?</p>
-        <a href="{% static 'portfolio/CV-MunirKahil.pdf'}" class="btn btn-primary btn-lg rounded-0 my-3">Download CV</a>
+        <a href="{% static 'portfolio/CV-MunirKahil.pdf' %}" class="btn btn-primary btn-lg rounded-0 my-3">Download CV</a>
     </div>
 
 </header>
 
+<div class="row my-4 text-center">
+    
+    <h3>My projects</h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque, fugit.</p>
 
-<h1>Home</h1>
-
-{% for Project in Projects %}
-
-<h2>{{ Project.title }}</h2>
-<p>{{ Project.description }}</p>
-<img src="{{ Project.image.url }}" alt="{{Project.tittle}}">
-
-{% if Project.url %}
-
-<a href="{{Project.url}}">{{Project.url}}</a>
-
-{% endif %}
+    <h3>{% for Project in Projects %}</h3>
+    
+<div class="col-md-4 p-4">
+    <div class="card bg-black card-project">
+        <img src="{{ Project.image.url }}" alt="{{Project.tittle}}" class="card-img-top"/>
+        <div class="card-body text-light">
+            <h2>{{ Project.title }}</h2> <p>{{ Project.description }}</p>
+    
+    
+        {% if Project.url %}
+    
+        <a href="{{Project.url}}">{{Project.url}}</a>
+    
+        {% endif %}
+    
+        </div>
+    </div>
+</div>
 
 {% endfor %}
-
+    
 {% endblock %}
+</div>
+
+
