--- a/blog/templates/post_detail.html
+++ b/blog/templates/post_detail.html
@@ -1,12 +1,18 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<h1>Post_detail</h1>
+<div class="text-center">
+    <h2>{{post.title}}</h2>
+    <h3 class="my-2 text-muted">{{post.date|date:'F jS Y'}}</h3>
+    
+    <img src="{{post.image.url}}" alt="{{post.title}}" class="img-fluid">
+    
+    <div class="my-4"></div>
+    <p>{{post.description|safe }}</p>
+</div>
 
-<h2>{{post.title}}</h2>
-<h3>{{post.date}}</h3>
-<p>{{post.description|safe }}</p>
-<img src="{{post.image.url}}" alt="{{post.title}}">
+
+
 
 
 {% endblock %}
